--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
                 </ul>
     <hr>
         <h2>Enlaces y Menú de Navegación</h2>
+                <a href="https://github.com/agonperg/actividad-curriculum.git" target="_blank">Codigo</a>
+                <br>
+                <a href="https://agonperg.github.io/actividad-curriculum/" target="_self">Cuarriculum</a>
+                <br>
                 <a href="https://medac.instructure.com/" target="_self">Instituto virtual</a>
+                <br>
                 <p><a href="Contacto.html">Enlace a contacto</a></p>
+                <br>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.6557525460744!2d-3.788306224648951!3d37.798106610816575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6dd7dec3dd20ad%3A0x4fad82fdbe189c8!2sMEDAC%20Aventura%20Formaci%C3%B3n%20Profesional!5e0!3m2!1ses!2ses!4v1728892104166!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            
 </body>
 </html>
