--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <p><b>Nombre:</b>Andrés</p>
             <p><b>Apellidos:</b>González Pérez</p>
             <pre><b>Dirección de correo electrónico de Medac:  </b>agp0109@alu.medac.es</pre>
+            <p><a href="Contacto.html">Contacto</a></p>
         </div>
     <hr>
         <h2><u>Estudios</u></h2>
@@ -28,7 +29,9 @@
                 <h4><b>Formación Profesional</b></h4>
                 <ol>
                     <li>Desarrollo de Aplicaciones Multiplataforma <small><b>(DAM)</b></small></li>
+                    <p><a href="horario.html">Horario</a></p>
                 </ol>
+    
     <hr>
         <h2><em><b>Sección de Habilidades</b></em></h2>
             <h4><u><i></i>Habilidades</i></u></h4>
@@ -47,14 +50,11 @@
                 </ul>
     <hr>
         <h2>Enlaces y Menú de Navegación</h2>
-                <a href="https://github.com/agonperg/actividad-curriculum.git" target="_blank">Codigo</a>
-                <br>
-                <a href="https://agonperg.github.io/actividad-curriculum/" target="_self">Cuarriculum</a>
-                <br>
-                <a href="https://medac.instructure.com/" target="_self">Instituto virtual</a>
-                <br>
-                <p><a href="Contacto.html">Enlace a contacto</a></p>
-                <br>
+                <p><a href="formulario.html">Formulario</a></p>
+                <p><a href="https://github.com/agonperg/actividad-curriculum.git" target="_blank">Codigo</a></p>
+                <p><a href="https://agonperg.github.io/actividad-curriculum/" target="_self"> Ver Cuarriculum</a></p>
+                <p><a href="https://medac.instructure.com/" target="_self">Instituto virtual</a></p>
+                <p><a href="Como hacer el commit.pdf">Explicación</a></p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.6557525460744!2d-3.788306224648951!3d37.798106610816575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6dd7dec3dd20ad%3A0x4fad82fdbe189c8!2sMEDAC%20Aventura%20Formaci%C3%B3n%20Profesional!5e0!3m2!1ses!2ses!4v1728892104166!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
